# openimmersion

./: CMakeLists.txt  Makefile  README.md  TutorialConfig.h  callback.c  camera.cpp  clean.c  client.c  face.cpp  get_image.c  haarcascade_eye_tree_eyeglasses.xml  haarcascade_frontalface_alt.xml  launch.sh  main.c  main.cpp  make.sh  mmal.c  openimmersion.h  raspicam_dir.sh  rebuild.sh  ref  refs  server.c  setup.c  simpletest_raspicam_cv.cpp  tutorial.c
NetCV/: make.sh  netcvc.cpp  netcvs.cpp
catkin_ws/src/server/: CMakeLists.txt  package.xml
client/: CMakeLists.txt  launch.sh  make.sh
client/src/: callback.c  init.c  mmal.c  setup.c
misc/: img.rgb
server/: CMakeLists.txt  launch.sh
server/src/: server.c
src/: callback.c  debug.c  gcc.sh  mmal.c  openimmersion.h
src/client/: CMakeLists.txt
src/client/include/: openimmersion.h  spots.h
src/client/src/: calibration.c  callback.c  client.c  commit_ports.c  debug.c  init.c  main.c  mmal.c  setup.c  spot.c  spotdetection.c
src/server/: CMakeLists.txt  package.xml
src/server/src/: Client.cpp  Client.hpp  Ros.cpp  Ros.hpp  Socket.constructor.cpp  Socket.cpp  Socket.hpp  init.cpp  listener.cpp  server.cpp  server.hpp
src/server/src/draft/: server.c  talker.cpp
